<resources>
    <string name="app_name">雷管E联</string>
    <string name="action_settings">连接</string>
    <string name="ble_not_supported">不支持BLE</string>
    <string name="scan">扫描</string>
    <string name="paired">配对</string>
    <string name="cancel">取消</string>
    <string name="select_device">选择设备</string>
    <string name="scanning">扫描中</string>
    <string name="send">发送</string>
    <string name="connect">连接</string>
    <string name="about">关于</string>
    <string name="str_name">name</string>
    <string name="str_has_selected">选择（0）</string>
    <string name="action_about">关于</string>
    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="loading">正在登录</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_add_device">ADD DEVICE</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="action_disconnecting">DISCONNECTING…</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="update">更新</string>
    <string name="select_firmware">选择固件</string>
    <string name="title_activity_main">Main</string>
    <string name="user_profile">用戶信息</string>
    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>
    <string name="uart_empty">数据为空</string>
    <string name="title_activity_personal_info">用户信息</string>
    <string name="title_activity_connecttest">连接检测</string>
    <string name="activity_network">雷管组网</string>
    <string name="activity_delay_download">延时下载</string>
    <string name="activity_assist">辅助功能</string>
    <string name="title_activity_baidu_map">地图页面</string>
    <string name="title_activity_settings">设备设置</string>
    <string name="title_offline_apply">离线申请</string>
    <string name="title_online_apply">在线申请</string>
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s失去%2$s连接</string>
    <string name="connection_connected_to">连接到</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occurred connecting to</string>
    <string name="connection_clear">Clear</string>
    <string name="subscription_new">New Subscription</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>
    <string name="title_activity_home">主页</string>
    <string name="title_activity_dfu">固件升级</string>
    <string name="about_version">版本号: %1$s 序号: %2$s</string>
    <string name="scrolling_animations">卷动动画</string>
    <string name="item_animators">个体动画</string>
    <string name="overall">主界面</string>
    <string name="navigation_drawer_open">打开引导菜单</string>
    <string name="navigation_drawer_close">关闭引导菜单</string>
    <string name="about_title">关于</string>
    <string name="app_update">软件更新</string>
    <string name="without_update">没有更新版本，不需要更新。</string>
    <string name="has_update">有更新版本 请更新！</string>
    <string name="user_account">用户帐户信息</string>
    <string name="title_other">其他</string>
    <string name="download_firmware">固件下载</string>
    <string name="empty_no_data">数据为空</string>
    <string name="title_activity_detinfo">雷管上报信息</string>
    <string name="title_activity_det_detail">雷管上报信息详情</string>
    <string name="device_id">起爆器编号：</string>
    <string name="dev_location">地&#160;&#160;&#160;&#160;&#160;&#160;标：</string>
    <string name="dev_time">起爆器时间：</string>
    <string name="file_sn">文件号：</string>
    <string name="dev_address">地&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="select_map">地图</string>
    <string name="device_id_data">起爆器: %1$s</string>
    <string name="dev_time_data">爆破时间: %1$s</string>
    <string name="dev_address_data">爆破地点: %1$s</string>
    <string name="dev_count_data">雷管数量: %1$s 发</string>
    <string name="det_countName">数量:</string>
    <string name="title_activity_login">登录页面</string>
    <string name="no_premission_download">SD卡下载权限被拒绝</string>
    <string name="dev_on">开</string>
    <string name="dev_off">关</string>
    <string name="daning_server">丹宁服务器</string>
    <string name="user_name">姓名:</string>
    <string name="user_sex">性别:</string>
    <string name="user_age">年龄:</string>
    <string name="user_id_number">身份证号:</string>
    <string name="company_name">单位名称:</string>
    <string name="company_code">单位代码:</string>
    <string name="user_id_code">身份证号:</string>
    <string name="modify">修改保存</string>
    <string name="app_index">应用名字:</string>
    <string name="version">版本号:</string>
    <string name="office_site">官网:</string>
    <string name="office_site_data">www.etek.com.cn</string>
    <string name="zhongbao_server">中爆服务器</string>
    <string name="title_activity_checkout">规则检查</string>
    <string name="scan_device">扫描起爆器</string>
    <string name="title_activity_log">日志查询</string>
    <string name="connect_device">连接</string>
    <string name="scanning_stop">扫描停止！</string>
    <string name="query_authority">获取授权</string>
    <string name="online_apply">在线申请</string>
    <string name="title_activity_authority">离线授权</string>
    <string name="title_activity_settings_more">补充设定</string>
    <string name="is_log">记录日志</string>
    <string name="is_log_db">日志数据库</string>
    <string name="copy_db">复制数据库</string>
    <string name="back_server">备份服务器:</string>
    <string name="back_server_address">http://129.211.7.213</string>
    <string name="title_activity_pro_detail">项目详情</string>
    <string name="title_activity_checkout_detail">详情</string>
    <string name="pro_code">项目编号:</string>
    <string name="pro_name">项目名称:</string>
    <string name="contract_code">合同编号:</string>
    <string name="contract_code_param">合同编号:   %1$s</string>
    <string name="project_code_param">项目编号:   %1$s</string>
    <string name="contract_name">合同名称:</string>
    <string name="controller_list">起爆器列表:</string>
    <string name="controller">起爆器:</string>
    <string name="controller_param">起爆器:   %1$s</string>
    <string name="token_param">令牌:   %1$s</string>
    <string name="sort_ascending">升序排列</string>
    <string name="sort_descending">降序排列</string>
    <string name="clear_sorting">清空排列</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">Page , showing items  - .</string>
    <string name="corner">序号</string>
    <string name="status">状态</string>
    <string name="valid_time">有效期</string>
    <string name="detonator_code">雷管编号</string>
    <string name="detonator_uid">雷管UID码</string>
    <string name="detonator_workcode">雷管工作码</string>
    <string name="det_workcode">雷管工作码: %1$s</string>
    <string name="det_uid">雷管UID码: %1$s</string>
    <string name="det_code">雷管编号: %1$s</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="operation">操作</string>
    <string name="firmware_name">固件名:</string>
    <string name="title_activity_download">固件下载</string>
    <string name="log_info">查看日志</string>
    <string name="title_activity_report">数据上报</string>
    <string name="activity_auth_bomb">授权起爆</string>
    <string name="ble_list">蓝牙设备列表</string>
    <string name="btn_sure">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="app_tools">项目工具</string>
    <string name="downloading">下载中...</string>
    <string name="unconnect">未连接</string>
    <string name="etek">ETEK出品</string>
    <string name="about_description">云南燃一化工科技有限公司</string>
    <string name="data_error">数据错误</string>
    <string name="un_report">未上报</string>
    <string name="reported">已上报</string>
    <string name="title_activity_rpt_detail">上报详情</string>
    <string name="report">上报</string>
    <string name="report_error">上报错误！</string>
    <string name="delete">删除</string>
    <string name="server_sim">模拟</string>
    <string name="zhongbao_address">中爆地址</string>
    <string name="show_version">版本号: %1$s</string>
    <string name="rpt_det_list">上报雷管列表</string>
    <string name="activity_det_report">数据上报</string>
    <string name="stop_scan">停止扫描</string>
    <string name="start_scan">开始扫描</string>
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="server_etek">ETEK</string>
    <string name="server_zhongbao">中爆上传</string>
    <string name="action_map">位置</string>
    <string name="rpt_info">合同编号：</string>
    <string name="info">信息：</string>
    <string name="server_danling">丹灵服务器</string>
    <string name="permision_location">许报区域：</string>
    <string name="action_delete">删除</string>
    <string name="det_register">已注册: </string>
    <string name="det_unused">未使用雷管：</string>
    <string name="det_unreg">未注册: </string>
    <string name="action_upload">上传</string>
    <string name="title_activity_selete_map">选择地址</string>
    <string name="action_refresh">刷新</string>
    <string name="title_act_online_checkout">在线检查</string>
    <string name="title_activity_edit_pro">项目检查</string>
    <string name="action_verify">校验</string>
    <string name="title_act_offline_checkout">离线检查</string>
    <string name="title_act_online_authorize">在线授权</string>
    <string name="pipe_code">管码：</string>
    <string name="uid">U I D：</string>
    <string name="delayed">延时：</string>
</resources>