<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:id="@+id/settings_more"
        android:background="@drawable/message_item_auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/app_index"
            android:textColor="#111111"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_app_name"
            android:layout_marginLeft="@dimen/dp_40"
            android:text="@string/app_name"
            android:textColor="@color/eighty_per_trans_black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:id="@+id/update_app"
        android:clickable="true"
        android:background="@drawable/message_item_auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/version"
            android:textColor="#111111"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/set_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_version"
            android:layout_marginLeft="@dimen/dp_40"
            android:text="2.5.4"
            android:textColor="@color/eighty_per_trans_black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/message_item_auto"
        android:id="@+id/rl_site"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/office_site"
            android:textColor="#111111"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_site"
            android:layout_marginLeft="@dimen/dp_40"
            android:text="@string/office_site_data"
            android:textColor="@color/eighty_per_trans_black" />
    </RelativeLayout>



    <TextView
        android:id="@+id/check_update"
        android:text="检查升级"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/seleted_status"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>