<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <RelativeLayout
        android:id="@+id/settings_sim"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/message_item_auto"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/server_sim"
            android:textColor="#111111"
            android:textSize="16sp" />
        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/sim_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_12"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:on="false"
            app:textOn="@string/dev_on"
            app:textOff="@string/dev_off"
            app:colorBorder="@color/colorAccent"/>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/settings_danling"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/message_item_auto"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/server_danling"
            android:textColor="#111111"
            android:textSize="16sp" />
        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/danling_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_12"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:on="false"
            app:textOn="@string/dev_on"
            app:textOff="@string/dev_off"
            app:colorBorder="@color/colorAccent"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_zhongbao"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/message_item_auto"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/server_zhongbao"
            android:textColor="#111111"
            android:textSize="16sp" />
        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/zhongbao_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_12"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:on="false"
            app:textOn="@string/dev_on"
            app:textOff="@string/dev_off"
            app:colorBorder="@color/colorAccent"/>


    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:id="@+id/zhongbao_select"
        android:background="@drawable/message_item_auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zhongbao_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/zhongbao_address"
            android:textColor="#111111"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/zhongbao_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@color/eighty_per_trans_black" />
    </RelativeLayout>

</LinearLayout>