<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SingleCheckActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:text="共检测___发"
        android:textSize="35sp"
        android:textColor="#48495F"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pipe_code"
                android:textSize="25sp"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/pipe_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXXXXXXXXX"
                android:textSize="25sp"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uid"
                android:textSize="25sp"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXXXXXXXXX"
                android:textSize="25sp"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delayed"
                android:textSize="25sp"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/delayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXXXXXXXXX"
                android:textSize="25sp"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>